<resources>
    <string name="app_name">BeAppMastersFragment</string>
    <string name="change_avatar">change avatar</string>
    <string name="masters">Мастера</string>
    <string name="full_name_example">Иванов Иван Иванович</string>
    <string name="full_name">ФИО сотрудника</string>
    <string name="phone_number">Номер телефона</string>
    <string name="phone_example">+ 996</string>
    <string name="service_type_speciality">Вид услуги/специальность</string>
    <string name="service_type_example">Парикмахер универсал</string>
    <string name="work_experience">Стаж работы</string>
    <string name="add_more">Добавить еще</string>
    <string name="gradient_background">gradient background</string>
    <string name="description">Описание</string>
</resources>