<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/account_fragment_upper_background"
        app:layout_constraintBottom_toTopOf="@id/bottom_layout"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            style="@style/MyToolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back">

            <TextView
                style="@style/MyToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masters" />

        </androidx.appcompat.widget.Toolbar>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/avatar_albert"
            app:civ_border_color="@color/white"
            app:civ_border_width="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/avatar_camera_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="100dp"
            android:background="@drawable/circular_btn"
            android:contentDescription="@string/change_avatar"
            android:src="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="@id/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <FrameLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="240dp"
        android:background="@color/whiteSmoke"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="26dp"
            android:paddingTop="16dp">

            <TextView
                style="@style/MastersScreenTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name" />

            <EditText
                style="@style/MastersScreenEditText"
                android:layout_width="match_parent"
                android:autofillHints="name"
                android:hint="@string/full_name_example"
                android:inputType="textPersonName" />

            <TextView
                style="@style/MastersScreenTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" />

            <EditText
                style="@style/MastersScreenEditText"
                android:layout_width="match_parent"
                android:autofillHints="name"
                android:hint="@string/phone_example"
                android:inputType="phone" />

            <TextView
                style="@style/MastersScreenTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_type_speciality" />

            <EditText
                style="@style/MastersScreenEditText"
                android:layout_width="match_parent"
                android:autofillHints="name"
                android:hint="@string/service_type_example"
                android:inputType="text" />

            <TextView
                android:id="@+id/add_more_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="12dp"
                android:text="@string/add_more"
                android:textColor="@color/artisticViolet" />

            <TextView
                style="@style/MastersScreenTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/work_experience" />

            <EditText
                style="@style/MastersScreenEditText"
                android:layout_width="match_parent"
                android:autofillHints="name"
                android:hint="@string/service_type_example"
                android:inputType="text" />

            <TextView
                style="@style/MastersScreenTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/work_experience" />

            <EditText
                style="@style/MastersScreenEditText"
                android:layout_width="match_parent"
                android:autofillHints="name"
                android:hint="@string/service_type_example"
                android:inputType="text" />

            <TextView
                style="@style/MastersScreenTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/work_experience" />

            <EditText
                style="@style/MastersScreenEditText"
                android:layout_width="match_parent"
                android:autofillHints="name"
                android:hint="@string/service_type_example"
                android:inputType="text" />

        </LinearLayout>

    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>